src/test/deca/context/valid/109_classe1Method0Param.deca
// Description:
//    Programme minimaliste: une classe pas très utile, une seule méthode sans paramètre.
//
// Résultats:
//
//
// Historique:
//    cree le 01/01/2022

class A {
	int f() {
		return 1;
	}
}
